fix whitespace on main page

--- a/styles/components/component-3/_mobile.scss
+++ b/styles/components/component-3/_mobile.scss
@@ -7,13 +7,14 @@
   padding-left: 20px;
   padding-right: 20px;
   padding-top: 70px;
-  padding-bottom: 90px;
+  padding-bottom: 70px;
+  margin-top: -70px;
   > h1 {
     color: $nav-links;
-    height: 55px;
+    height: 23px;
   }
   > p {
-    font-size: 13px;
+    font-size: 14px;
     text-align: start;
     text-indent: 10px;
     a {
