--- a/styles/components/component-4/_mobile.scss
+++ b/styles/components/component-4/_mobile.scss
@@ -1,10 +1,13 @@
 .component-4 {
   width: 100%;
   padding-top: 80px;
+  height: 100vh;
+  padding-bottom: 70px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
+  margin-top: -70px;
   > h1 {
     color: $nav-links;
     margin-bottom: 30px;
@@ -34,38 +37,6 @@
       width: 100%;
       height: 100%;
       position: relative;
-      // > .prev {
-      //   left: 0;
-      // }
-      // > .next {
-      //   right: 0;
-      // }
-      // > .carousel-button {
-      //   display: flex;
-      //   align-items: center;
-      //   height: 55px;
-      //   position: absolute;
-      //   background: none;
-      //   border: none;
-      //   font-size: 2rem;
-      //   top: 50%;
-      //   z-index: 2;
-      //   transform: translateY(-50%);
-      //   color: rgba(255, 255, 255, 0.5);
-      //   cursor: pointer;
-      //   padding: 0 0.5rem;
-      //   background-color: rgba(0, 0, 0, 0.7);
-      //   &:hover,
-      //   &:focus {
-      //     color: white;
-      //   }
-      //   &:focus {
-      //     outline: none;
-      //   }
-      //   > img {
-      //     width: 45px;
-      //   }
-      // }
       .room-img {
         margin-top: 15px;
         width: 100%;
