--- a/styles/components/component-5/_mobile.scss
+++ b/styles/components/component-5/_mobile.scss
@@ -8,4 +8,5 @@
   padding-right: 20px;
   padding-top: 100px;
   padding-bottom: 110px;
+  margin-top: -70px;
 }
